src/objects/ORDO_Bus_Line__c.object
<CustomObject>
    <fields>
        <fullName>Day_Course_Number__c</fullName>
        <label>Day Course Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_Type__c</fullName>
        <label>Day Type</label>
        <picklist>
            <picklistValues>
                <fullName>Everyday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Direction 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direction 2</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Date__c</fullName>
        <label>Special Date</label>
        <type>Date</type>
    </fields>
    <label>Bus Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bus Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Line</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>